# latent-llm

./: .gitignore  README.md  README_latent_diffusion.md  generate_with_diffusion.py  inference.py  pyproject.toml  requirements_diffusion.txt  train.py  train_latent_diffusion.py
examples/: latent_diffusion_demo.py
latent_llm/: get_tokenizer.py  train_flow_matching.py
latent_llm/data/: text_dataset.py
latent_llm/models/: gpt_latent.py  gpt_latent_flow_matching.py  latent_diffusion.py  latent_encoder.py
