[project]
name = "latent-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "numpy>=2.2.3",
    "rich>=13.9.4",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wandb>=0.19.8",
]
