[project]
name = "latent-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.3.2",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "mnemonic>=0.21",
    "nltk>=3.9.1",
    "numpy>=2.2.3",
    "peft>=0.14.0",
    "rich>=13.9.4",
    "tiktoken>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wandb>=0.19.8",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers", rev = "v4.49.0-Gemma-3" }

[tool.hatch.build.targets.wheel]
packages = ["latent_llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
